[fix] sonarqube code smells